# harmoniza-crm

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  railway.json
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 267d23420b6c_add_operational_crm_records.py  347dde714f6f_create_users_table.py  93b3355df2cc_add_pipeline_stage_history.py  9771db181bf4_add_leads_and_lead_sources_tables.py
apps/api/app/: main.py
apps/api/app/core/: config.py
apps/api/app/db/: models.py  session.py
apps/api/app/deploy/: bootstrap_admin.py
apps/api/app/models/: __init__.py  lead.py  lead_outcome.py  lead_source.py  lead_task.py  loss_reason.py  pipeline_stage_history.py  user.py
apps/api/app/repositories/: lead_repository.py
apps/api/app/routers/: auth.py  dashboard.py  lead_capture.py  leads.py  ops.py  outcomes.py  tasks.py
apps/api/app/schemas/: __init__.py  auth.py  dashboard.py  lead.py  lead_source.py  outcomes.py  pipeline.py  tasks.py  triage.py
apps/api/app/services/: auth_service.py  lead_service.py  pipeline_service.py
apps/api/app/tests/: conftest.py  test_create_lead.py  test_deploy_readiness.py  test_health.py  test_lead_capture.py  test_lead_model.py  test_lead_source.py  test_operational_completion.py  test_pipeline_transition.py  testing_db.py
apps/api/scripts/: bootstrap_admin.py  init_db.sh
apps/web/: Dockerfile
docs/architecture/: hermes-cron-jobs.md  hermes-integration.md
docs/deploy/: railway.md
docs/plans/: README.md  beta-checklist.md
(+24 files in other folders)
