[project]
name = "harmoniza-crm-api"
version = "0.1.0"
description = "Backend API for Harmoniza CRM V1"
requires-python = ">=3.13"
dependencies = [
  "alembic>=1.16.0,<2.0.0",
  "email-validator>=2.2.0,<3.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "pydantic-settings>=2.3.0,<3.0.0",
  "pwdlib[argon2]>=0.2.1,<1.0.0",
  "pyjwt>=2.10.0,<3.0.0",
  "sqlalchemy>=2.0.41,<3.0.0",
  "psycopg[binary]>=3.2.9,<4.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[dependency-groups]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "pytest>=8.3.0,<9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]
